--- a/thinkphp/tp5默认配置优化.html
+++ b/thinkphp/tp5默认配置优化.html
@@ -1,1 +1,3 @@
-<attachment contenteditable="false" data-atts="%5B%5D" data-aid=".atts-8f83de3d-df31-4197-aff4-d82d6e7a3871"></attachment><p><br></p>
+<attachment contenteditable="false" data-atts="%5B%5D" data-aid=".atts-8f83de3d-df31-4197-aff4-d82d6e7a3871"></attachment><pre class="ql-syntax" spellcheck="false"># log
+'level'&nbsp;&nbsp;&nbsp;&nbsp;=&gt; ['debug', 'error', 'critical', 'alert', 'emergency'],
+</pre><p><br></p>
